@@ -2,7 +2,7 @@ package de.bogenliga.application.services.v1.regionen.service;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
@@ -62,7 +62,7 @@ public class RegionenService implements ServiceFacade {
     public List<RegionenDTO> findAll() {
         final List<RegionenDO> regionDOList = regionenComponent.findAll();
 
-        return regionDOList.stream().map(RegionenDTOMapper.toDTO).collect(Collectors.toList());
+        return regionDOList.stream().map(RegionenDTOMapper.toDTO).toList();
     }
 
     @GetMapping(value = "/search/{searchstring}", produces = MediaType.APPLICATION_JSON_VALUE)
@@ -70,7 +70,8 @@ public class RegionenService implements ServiceFacade {
     public List<RegionenDTO> findBySearch(@PathVariable("searchstring") final String searchTerm) {
         final List<RegionenDO> regionDOList = regionenComponent.findBySearch(searchTerm);
 
-        return regionDOList.stream().map(RegionenDTOMapper.toDTO).collect(Collectors.toList());
+
+        return regionDOList.stream().map(RegionenDTOMapper.toDTO).toList();
     }
 
     @GetMapping(value = "ID/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
@@ -154,7 +155,8 @@ public class RegionenService implements ServiceFacade {
 
         final List<RegionenDO> regionenDOList = regionenComponent.findAllByType(upperCaseType);
 
-        return regionenDOList.stream().map(RegionenDTOMapper.toDTO).collect(Collectors.toList());
+
+        return regionenDOList.stream().map(RegionenDTOMapper.toDTO).toList();
     }
 
 
